# job-search

./: .codexignore  .env.example  .gitignore  Dockerfile  README.md  console_utils.py  docker-compose.yml  inspect_db.py  main.py  pyproject.toml  requirements.txt  utils.py
agent/: linkedin_outreach.py  pipeline.py  routing_agent.py
config/: __init__.py  resumes.py  settings.py
db/: database.py
notifier/: digest.py
scraper/: greenhouse.py  greenhouse_auth.py  hn.py  linkedin.py  linkedin_auth.py  simplify.py
ui/: Dockerfile  app.py
ui/templates/: base.html  index.html  outreach.html
