[project]
name = "job-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Bhargav Singapuri",email = "bhsingapuri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "anthropic (>=0.85.0,<0.86.0)",
    "rich (>=14.3.3,<15.0.0)",
    "pydantic-ai-slim[anthropic,openai] (>=1.75.0,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
